attempting to get Heroku working without a port number

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <option value="2008">2008</option>
             </select>
             <select class="race" id="race" name="race" >
-                <option class="raceOption" value="">Select Race</option>
+                <option class="" value="">Select Race</option>
             </select>
         </div>
         <div class="title-bar">
