added images and modal

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <option value="2009">2009</option>
                 <option value="2008">2008</option>
             </select>
-            <select class="race" id="race" name="race" >
+            <select class="race" id="race" name="race">
                 <option class="" value="">Select Race</option>
             </select>
         </div>
@@ -56,6 +56,30 @@
             <div class="driver-standings-points"></div>
             <div class="constructor-standings"></div>
             <div class="constructor-standings-points"></div>
+        </div>
+
+        <div class="modal">
+            <div class="modal-title-bar">
+                <h1>Driver Race Results</h1>
+                <h1>Constructor Race Results</h1>
+                <h1>Circuit</h1>
+            </div>
+            <div class="results-container">
+                <div class="driver-race-results">
+                    <div class="driver-race-standings">
+
+                    </div>
+                    <div class="driver-race-points">
+
+                    </div>
+                </div>
+                <div class="constructor-race-results">
+
+                </div>
+                <div class="circuit-image">
+                    <img class="circuit-layout" src='' alt="">
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/main.js"></script>
