added constructor results

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="modal">
             <div class="modal-title-bar">
                 <h1>Driver Race Results</h1>
-                <h1>Constructor Race Results</h1>
+                <!-- <h1>Constructor Race Results</h1> -->
                 <h1>Circuit</h1>
             </div>
             <div class="results-container">
@@ -72,10 +72,13 @@
                     <div class="driver-race-points">
 
                     </div>
-                </div>
-                <div class="constructor-race-results">
+                    <div class="driver-race-constructor">
 
+                    </div>
                 </div>
+                <!-- <div class="constructor-race-results">
+
+                </div> -->
                 <div class="circuit-image">
                     <img class="circuit-layout" src='' alt="">
                 </div>
