added time results

--- a/index.html
+++ b/index.html
@@ -69,11 +69,14 @@
                     <div class="driver-race-standings">
 
                     </div>
+                    <div class="driver-race-constructor">
+
+                    </div>
                     <div class="driver-race-points">
 
                     </div>
-                    <div class="driver-race-constructor">
-
+                    <div class="driver-race-time">
+                        
                     </div>
                 </div>
                 <!-- <div class="constructor-race-results">
