fasted lap incorrectly labeled, disabled for now

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- <h1>Pole</h1> -->
             <h1>Driver</h1>
             <h1>Constructor</h1>
-            <h1>Fastest Lap</h1>
+            <!-- <h1>Fastest Lap</h1> -->
             <h1>Driver Standings</h1>
             <h1>Points</h1>
             <h1>Constructor Standings</h1>
@@ -51,7 +51,7 @@
             <div class="race-name" id="race-name"></div>
             <div class="driver-name"></div>
             <div class="constructor-name"></div>
-            <div class="fastest-lap-name"></div>
+            <!-- <div class="fastest-lap-name"></div> -->
             <div class="driver-standings"></div>
             <div class="driver-standings-points"></div>
             <div class="constructor-standings"></div>
@@ -76,7 +76,7 @@
 
                     </div>
                     <div class="driver-race-time">
-                        
+
                     </div>
                 </div>
                 <!-- <div class="constructor-race-results">
