added close modal button, fixed word wrap

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                     <img class="circuit-layout" src='' alt="">
                 </div>
             </div>
+            <button class="close-modal" type="button">
+                Close Race Results
+            </button>
         </div>
     </div>
     <script src="js/main.js"></script>
